# symedit

./: CMakeLists.txt  icon.rc
